-Decreased Edward the Confessor's lifespan even more and blocked him from introducing an heir manually
-Refusing a province to become Germanic during the ostsiedlung will no longer cause nationwide unrest
-Turkish beyliks will no longer grant Dhimmi autonomy
-It is no longer possible to take the Russian Crown if you have the Byzantine Monarchy government
-Italian Communes will no longer be able to turn into a monarchy through passing all government reforms; they will have to use a decision turning them into a signoria or monarchy instead
-The Szekely and Szaszok culture events can no longer fire more than once
-Corrected some Magyar DPNs
-Swapped Phrygian and Cappadokian culture colours
-Changed Fife's traditions for the glory of Dundee
-Changed the following flags: Blankenburg, Mansfeld, Merseburg, Querfurt, Stolberg, Wernigerode, Leisnig, Falkenstein, Hall, Limpurg, Leuchtenberg
-Minor history changes especially around Saxony and the Palatinate
-More German localization additions
-Other minor localization/bug fixes

# v 2.1.3 #

-Added the following new mercenary companies: Syrian Company, Anatolian Skirmishers, Siculo-Norman Company, Hussite Warbands, Silesian Companions, Austrian Grenzers, Brabanters, Avar Elite, and a secret one
-Added new mission tree for Aquitaine with 29 missions
-Added new mission tree for Muscovy and Russia with 77 missions
-Small fixes for the following mission trees: Pisa, Sicily, Altsachsen, Holland/Netherlands, Luxembourg, Athens, Naples, Karlings, Prussia, Baghdad, Seljuks, Switzerland, Foix
-Fixed major bug where some crusade ending events wouldn't fire
-Fixed Byzantium losing crown land when loading a savegame
-Fixed the Mazovia formation decision showing for Mazovia
-Fixed some Asian missions being duplicated (also fixes the "Production Leader" mission not showing)
-Fixed Sicilian formation not properly giving missions
-Overhauled and extended Provence's mission tree
-Added CoT for Wurzburg
-Increased Magdeburg's development