@@ -1922,6 +1922,11 @@
  HREMD121: "Over the course of the medieval period, the inhabitants of the densely populated cities in Northern Italy have come to demand greater independence and privileges in order to protect their inhabitants and resist the whims of lawless nobles. Now, spurred on by the recent Investiture Controversy, these cities have taken advantage of the Emperor's precarious situation and begun to form communes independent from their former masters. The consequences of this are as yet uncertain, but already tensions are on the rise between feudal and communal states which could lead to factional conflicts in the future."
  HREMA121: "An intriguing development..."
  HREMA121TT: "The §YItalian Communes§! begin to appear."
+ HREMT122: "[italian_commune_country.GetName] Demands Independence"
+ HREMD122: "Among the many cities in northern Italy clamoring for greater autonomy is [italian_commune_country.GetName], who are demanding rights and privileges that would effectively make them independent of our control. We can either concede to their demands or try to keep them integrated into our state, but the latter option will provoke harsh resistance from the city administration."
+ HREMA122: "Give them independence"
+ HREMA122TT: "§Y[italian_commune_country.GetName]§! will be released and we will lose cores on their territory."
+ HREMB122: "Refuse to grant privileges"
  HREMT123: "Expulsion of Moors From $PROVINCENAME$"
  HREMD123: "Since the Umayyad Caliphate invaded the Visigoths in the eighth century, Iberia has gradually developed a mixed culture of Muslims and Morisco converts. As part of the project set in motion by Pelayo d'Asturias five centuries ago, we have taken it upon ourselves to drive the heathens back over the Straits of Gibraltar and restore the integrity of the Christian Iberian kingdom.\nThe Moorish settlers and converts in the recently-conquered province of $PROVINCENAME$ have been given an ultimatum: leave immediately by your own volition, or be forced out by the sword."
  HREMA123: "The Reconquista continues!"
