@@ -1921,6 +1921,11 @@
  HREMD121: "Im Laufe des Mittelalters sind die Bewohner der dicht besiedelten Städte Norditaliens dazu übergegangen, mehr Unabhängigkeit und Privilegien zu fordern, um ihre Bürger zu schützen und den Launen des gesetzlosen Adels zu widerstehen. Nun haben diese Städte, angespornt durch den jüngsten Investiturstreit, die prekäre Lage des Kaisers ausgenutzt und begonnen, von ihren früheren Herren unabhängige Kommunen zu bilden. Die Folgen sind noch ungewiss, aber bereits jetzt nehmen die Spannungen zwischen Feudal- und Gemeindestaaten zu, die in Zukunft zu fraktionellen Zusammenstößen führen könnten."
  HREMA121: "Eine ungewöhnliche Entwicklung..."
  HREMA121TT: "Die §Yitalienischen Gemeinden§! beginnen aufzutauchen."
+ HREMT122: "[italian_commune_country.GetName] Demands Independence"
+ HREMD122: "Among the many cities in northern Italy clamoring for greater autonomy is [italian_commune_country.GetName], who are demanding rights and privileges that would effectively make them independent of our control. We can either concede to their demands or try to keep them integrated into our state, but the latter option will provoke harsh resistance from the city administration."
+ HREMA122: "Give them independence"
+ HREMA122TT: "§Y[italian_commune_country.GetName]§! will be released and we will lose cores on their territory."
+ HREMB122: "Refuse to grant privileges"
  HREMT123: "Vertreibung der Mauren aus $PROVINCENAME$"
  HREMD123: "Seit der Invasion des umayyadischen Kalifats in das Westgotenreich im achten Jahrhundert hat sich in Iberien allmählich eine gemischte Kultur von Muslimen und Morisken entwickelt. Im Rahmen des von Pelayo d'Asturias vor fünf Jahrhunderten in Gang gesetzten Projekts haben wir es uns zur Aufgabe gemacht, die Heiden über die Straße von Gibraltar zurückzutreiben und die Integrität des christlichen iberischen Königreichs wiederherzustellen.\nDen maurischen Siedlern und Konvertiten in der kürzlich eroberten Provinz $PROVINCENAME$ wurde ein Ultimatum gestellt: Sie sollen aus eigenem Willen sofort aufbrechen oder durch das Schwert vertrieben werden."
  HREMA123: "Die Reconquista geht weiter!"
