@@ -24,6 +24,7 @@
 -Refusing a province to become Germanic during the ostsiedlung will no longer cause nationwide unrest
 -Turkish beyliks will no longer grant Dhimmi autonomy
 -It is no longer possible to take the Russian Crown if you have the Byzantine Monarchy government
+-Players now get events to deal with the rise of the Italian Communes
 -Italian Communes will no longer be able to turn into a monarchy through passing all government reforms; they will have to use a decision turning them into a signoria or monarchy instead
 -The Szekely and Szaszok culture events can no longer fire more than once
 -Corrected some Magyar DPNs
